compiler/testData/diagnostics/tests/script/AccessForwardDeclarationInScript.fir.kts
val x = <!INFERENCE_ERROR!>y<!>

val y = 2
